// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Avatar action demo works fine 1`] = `
<action>
  <wx-view
    class="row"
  >
    <t-avatar-group
      max="5"
      size="small"
    >
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/2.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/3.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/4.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/5.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
      />
      <t-avatar
        icon="user-add"
        slot="collapseAvatar"
        bind:tap="onAddTap"
      />
    </t-avatar-group>
  </wx-view>
  <wx-view
    class="row"
  >
    <t-avatar-group
      max="5"
      size="40px"
    >
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/2.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/3.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/4.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/5.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
      />
      <t-avatar
        icon="user-add"
        slot="collapseAvatar"
        bind:tap="onAddTap"
      />
    </t-avatar-group>
  </wx-view>
  <wx-view
    class="row"
  >
    <t-avatar-group
      max="5"
      size="medium"
    >
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/2.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/3.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/4.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/5.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
      />
      <t-avatar
        icon="user-add"
        slot="collapseAvatar"
        bind:tap="onAddTap"
      />
    </t-avatar-group>
  </wx-view>
</action>
`;

exports[`Avatar Avatar exhibition demo works fine 1`] = `
<exhibition>
  <wx-view
    class="row"
  >
    <t-avatar-group
      cascading="left-up"
      collapseAvatar="+5"
      max="5"
      size="small"
    >
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
        size="small"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/2.png"
        size="small"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/3.png"
        size="small"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/4.png"
        size="small"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/5.png"
        size="small"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
        size="small"
      />
    </t-avatar-group>
  </wx-view>
  <wx-view
    class="row"
  >
    <t-avatar-group
      cascading="left-up"
      collapseAvatar="+5"
      max="5"
      size="40px"
    >
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/2.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/3.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/4.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/5.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
      />
    </t-avatar-group>
  </wx-view>
  <wx-view
    class="row"
  >
    <t-avatar-group
      cascading="left-up"
      collapseAvatar="+5"
      max="5"
      size="medium"
    >
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/2.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/3.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/4.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/5.png"
      />
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
      />
    </t-avatar-group>
  </wx-view>
</exhibition>
`;

exports[`Avatar Avatar shape demo works fine 1`] = `
<shape>
  <wx-view
    class="row"
  >
    <wx-view
      class="avatar-example"
    >
      <t-avatar
        icon="user"
      />
      <wx-text
        class="avatar-description"
      >
        默认
      </wx-text>
    </wx-view>
    <wx-view
      class="avatar-example"
    >
      <t-avatar
        alt="avatar"
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
      />
      <wx-text
        class="avatar-description"
      >
        用户
      </wx-text>
    </wx-view>
    <wx-view
      class="avatar-example"
    >
      <t-avatar
        alt="avatar"
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
        shape="circle"
      />
      <wx-text
        class="avatar-description"
      >
        圆形
      </wx-text>
    </wx-view>
    <wx-view
      class="avatar-example"
    >
      <t-avatar
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
        shape="round"
      />
      <wx-text
        class="avatar-description"
      >
        方形
      </wx-text>
    </wx-view>
    <wx-view
      class="avatar-example text"
    >
      <t-avatar
        tClassContent="external-class-content"
      >
        A
      </t-avatar>
      <wx-text
        class="avatar-description"
      >
        自定义文字
      </wx-text>
    </wx-view>
  </wx-view>
</shape>
`;

exports[`Avatar Avatar size demo works fine 1`] = `
<size>
  <wx-view
    class="row"
  >
    <wx-text
      class="row-text-64 row-text-common"
    >
      L
    </wx-text>
    <wx-text
      class="row-text-48 row-text-common"
    >
      M
    </wx-text>
    <wx-text
      class="row-text-32 row-text-common"
    >
      S
    </wx-text>
  </wx-view>
  <wx-view
    class="row"
  >
    <wx-view
      class="avatar-example"
    >
      <t-avatar
        icon="user"
        size="large"
      />
    </wx-view>
    <wx-view
      class="avatar-example"
    >
      <t-avatar
        icon="user"
        size="medium"
      />
    </wx-view>
    <wx-view
      class="avatar-example"
    >
      <t-avatar
        icon="user"
        size="small"
      />
    </wx-view>
  </wx-view>
  <wx-view
    class="row"
  >
    <wx-view
      class="avatar-example"
    >
      <t-avatar
        badgeProps="{{
          Object {
            "count": 16,
          }
        }}"
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
        size="large"
      />
    </wx-view>
    <wx-view
      class="avatar-example"
    >
      <t-avatar
        badgeProps="{{
          Object {
            "count": 8,
          }
        }}"
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
        size="medium"
      />
    </wx-view>
    <wx-view
      class="avatar-example"
    >
      <t-avatar
        badgeProps="{{
          Object {
            "dot": true,
          }
        }}"
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
        size="small"
      />
    </wx-view>
  </wx-view>
  <wx-view
    class="row"
  >
    <wx-view
      class="avatar-example"
    >
      <t-avatar
        badgeProps="{{
          Object {
            "count": 16,
          }
        }}"
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
        shape="round"
        size="large"
      />
    </wx-view>
    <wx-view
      class="avatar-example"
    >
      <t-avatar
        badgeProps="{{
          Object {
            "count": 8,
          }
        }}"
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
        shape="round"
        size="medium"
      />
    </wx-view>
    <wx-view
      class="avatar-example"
    >
      <t-avatar
        badgeProps="{{
          Object {
            "dot": true,
          }
        }}"
        image="https://cdn-we-retail.ym.tencent.com/retail-ui/components-exp/avatar/avatar-v2/1.png"
        shape="round"
        size="small"
      />
    </wx-view>
  </wx-view>
  <wx-view
    class="row bottom-row"
  >
    <wx-view
      class="avatar-example"
    >
      <t-avatar
        size="large"
        tClassContent="external-class-content"
      >
        A
      </t-avatar>
    </wx-view>
    <wx-view
      class="avatar-example"
    >
      <t-avatar
        size="medium"
        tClassContent="external-class-content"
      >
        A
      </t-avatar>
    </wx-view>
    <wx-view
      class="avatar-example"
    >
      <t-avatar
        size="small"
        tClassContent="external-class-content"
      >
        A
      </t-avatar>
    </wx-view>
  </wx-view>
</size>
`;
